WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
146521
Never try to pass URLs to LaunchServices when they're the same domain as the current URL
https://bugs.webkit.org/show_bug.cgi?id=146521
Summary
Never try to pass URLs to LaunchServices when they're the same domain as the ...
Brady Eidson
Reported
2015-07-01 12:22:10 PDT
Never try to pass URLs to LaunchServices when they're the same domain as the current URL <
rdar://problem/20731429
>
Attachments
Patch v1
(5.95 KB, patch)
2015-07-01 12:24 PDT
,
Brady Eidson
achristensen
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Brady Eidson
Comment 1
2015-07-01 12:24:53 PDT
Created
attachment 255947
[details]
Patch v1
WebKit Commit Bot
Comment 2
2015-07-01 12:26:07 PDT
Attachment 255947
[details]
did not pass style-queue: ERROR: Source/WebKit2/UIProcess/Cocoa/NavigationState.mm:236: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebKit2/UIProcess/Cocoa/NavigationState.mm:236: The parameter type should use PassRefPtr instead of RefPtr. [readability/pass_ptr] [5] ERROR: Source/WebKit2/UIProcess/Cocoa/NavigationState.mm:254: Place brace on its own line for function definitions. [whitespace/braces] [4] ERROR: Source/WebKit2/UIProcess/Cocoa/NavigationState.mm:309: Place brace on its own line for function definitions. [whitespace/braces] [4] Total errors found: 4 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Brady Eidson
Comment 3
2015-07-01 15:02:27 PDT
https://trac.webkit.org/changeset/186196
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug