Never try to pass URLs to LaunchServices when they're the same domain as the current URL. <rdar://problem/20731429> and https://bugs.webkit.org/show_bug.cgi?id=146521

Reviewed by Alex Christensen.

* UIProcess/Cocoa/NavigationState.mm:
(WebKit::tryAppLink): Compare the proposed URL to the current URL to see if they’re in the same domain.
(WebKit::NavigationState::NavigationClient::decidePolicyForNavigationAction):

Canonical link: https://commits.webkit.org/164610@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@186196 268f45cc-cd09-0410-ab3c-d52691b4dbfc