Source/WebKit2/UIProcess/Cocoa/NavigationState.mm
@@ -63,6 +63,7 @@
 #import "_WKRenderingProgressEventsInternal.h"
 #import "_WKSameDocumentNavigationTypeInternal.h"
 #import <WebCore/Credential.h>
+#import <WebCore/URL.h>
 #import <wtf/NeverDestroyed.h>
 
 #if HAVE(APP_LINKS)
@@ -72,6 +73,8 @@
 #if USE(QUICK_LOOK)
 #import "QuickLookDocumentData.h"
 #endif
+
+using namespace WebCore;
 
 namespace WebKit {
 
@@ -230,33 +233,44 @@ NavigationState::NavigationClient::~NavigationClient()
 {
 }
 
-static void tryAppLink(RefPtr<API::NavigationAction> navigationAction, std::function<void (bool)> completionHandler)
+static void tryAppLink(RefPtr<API::NavigationAction> navigationAction, const String& currentMainFrameURL, std::function<void (bool)> completionHandler)
 {
 #if HAVE(APP_LINKS)
     bool mainFrameNavigation = !navigationAction->targetFrame() || navigationAction->targetFrame()->isMainFrame();
     bool shouldOpenExternalURLs = navigationAction->shouldOpenExternalURLs();
-    if (mainFrameNavigation && shouldOpenExternalURLs) {
-        auto* localCompletionHandler = new std::function<void (bool)>(WTF::move(completionHandler));
-        [LSAppLink openWithURL:navigationAction->request().url() completionHandler:[localCompletionHandler](BOOL success, NSError *) {
-            dispatch_async(dispatch_get_main_queue(), [localCompletionHandler, success] {
-                (*localCompletionHandler)(success);
-                delete localCompletionHandler;
-            });
-        }];
+    if (!mainFrameNavigation || !shouldOpenExternalURLs) {
+        completionHandler(false);
         return;
     }
-#endif
 
+    // If the new URL is within the same origin as the current URL, do not try to open it externally.
+    URL currentURL = URL(ParsedURLString, currentMainFrameURL);
+    if (protocolHostAndPortAreEqual(currentURL, navigationAction->request().url())) {
+        completionHandler(false);
+        return;
+    }
+
+    auto* localCompletionHandler = new std::function<void (bool)>(WTF::move(completionHandler));
+    [LSAppLink openWithURL:navigationAction->request().url() completionHandler:[localCompletionHandler](BOOL success, NSError *) {
+        dispatch_async(dispatch_get_main_queue(), [localCompletionHandler, success] {
+            (*localCompletionHandler)(success);
+            delete localCompletionHandler;
+        });
+    }];
+#else
     completionHandler(false);
+#endif
 }
 
-void NavigationState::NavigationClient::decidePolicyForNavigationAction(WebPageProxy&, API::NavigationAction& navigationAction, Ref<WebFramePolicyListenerProxy>&& listener, API::Object* userData)
+void NavigationState::NavigationClient::decidePolicyForNavigationAction(WebPageProxy& webPageProxy, API::NavigationAction& navigationAction, Ref<WebFramePolicyListenerProxy>&& listener, API::Object* userData)
 {
+    String mainFrameURLString = webPageProxy.mainFrame()->url();
+
     if (!m_navigationState.m_navigationDelegateMethods.webViewDecidePolicyForNavigationActionDecisionHandler) {
         RefPtr<API::NavigationAction> localNavigationAction = &navigationAction;
         RefPtr<WebFramePolicyListenerProxy> localListener = WTF::move(listener);
 
-        tryAppLink(localNavigationAction, [localListener, localNavigationAction] (bool followedLinkToApp) {
+        tryAppLink(localNavigationAction, mainFrameURLString, [localListener, localNavigationAction] (bool followedLinkToApp) {
             if (followedLinkToApp) {
                 localListener->ignore();
                 return;
@@ -292,12 +306,12 @@ void NavigationState::NavigationClient::decidePolicyForNavigationAction(WebPageP
     RefPtr<API::NavigationAction> localNavigationAction = &navigationAction;
     RefPtr<WebFramePolicyListenerProxy> localListener = WTF::move(listener);
     RefPtr<CompletionHandlerCallChecker> checker = CompletionHandlerCallChecker::create(navigationDelegate.get(), @selector(webView:decidePolicyForNavigationAction:decisionHandler:));
-    [navigationDelegate webView:m_navigationState.m_webView decidePolicyForNavigationAction:wrapper(navigationAction) decisionHandler:[localListener, localNavigationAction, checker](WKNavigationActionPolicy actionPolicy) {
+    [navigationDelegate webView:m_navigationState.m_webView decidePolicyForNavigationAction:wrapper(navigationAction) decisionHandler:[localListener, localNavigationAction, checker, mainFrameURLString](WKNavigationActionPolicy actionPolicy) {
         checker->didCallCompletionHandler();
 
         switch (actionPolicy) {
         case WKNavigationActionPolicyAllow:
-            tryAppLink(localNavigationAction, [localListener](bool followedLinkToApp) {
+            tryAppLink(localNavigationAction, mainFrameURLString, [localListener](bool followedLinkToApp) {
                 if (followedLinkToApp) {
                     localListener->ignore();
                     return;
